Fixed bug with empty multivalue params and doc-values
This was failing a test in ENRICH